--- a/src/main/resources/login-view.fxml
+++ b/src/main/resources/login-view.fxml
@@ -7,8 +7,7 @@
 
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.streamingplatformfeedback.ui.LoginController">
    <children>
-      <TextField fx:id="usernameField" alignment="CENTER" maxWidth="200.0" prefWidth="392.0" promptText="Username" />
-      <TextField fx:id="emailField" alignment="CENTER" maxWidth="200.0" promptText="Password" />
-      <Button mnemonicParsing="false" text="Login" />
+      <TextField fx:id="emailField" alignment="CENTER" maxWidth="200.0" prefWidth="392.0" promptText="Username" />
+      <Button mnemonicParsing="false" text="Login" onAction="#onLoginButtonClick"/>
    </children>
 </VBox>
